Bug 721659.  Update the width/height of an image synchronously when src is set to something that was preloaded.  r=bholley